--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -9,14 +9,14 @@
 <body>
     <div class="login-container">
         <h2>Login</h2>
-        <form action="#" method="post" style="width:100%;">
+        <form action="{{ url_for('auth.login') }}" method="POST" style="width:100%;">
             <div class="input-group">
                 <label for="email">E-mail</label>
-                <input type="email" id="email" name="email"  required>
+                <input type="email" id="email" name="email" required>
             </div>
             <div class="input-group">
-                <label for="senha">Senha</label>
-                <input type="password" id="senha" name="senha" required>
+                <label for="password">Senha</label>
+                <input type="password" id="password" name="password" required>
             </div>
             <button type="submit" class="button-login">Entrar</button>
         </form>
