--- a/templates/home.html
+++ b/templates/home.html
@@ -1,19 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOME</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='custom.css') }}">
-</head>
-<body>
-    <div class="home-container">
-        <h1>Bem-vindo a SELOEDU!</h1>
-        <p>Seu gerenciador de aplicação de treinamentos.</p>
-        <p>Faça login para acessar o painel.</p>
-        <div class="button-wrapper">
-            <button class="button-home" onclick="window.location.href='{{ url_for('auth.login') }}'">Entrar</button>
-        </div>
+{% extends 'base.html' %}
+{% block title %}Home - SELOEDU{% endblock %}
+{% block content %}
+<div class="home-container">
+    <h1>Bem-vindo ao SELOEDU</h1>
+    <p>Seu gerenciador de aplicação de treinamentos.</p>
+    <p>Faça login para acessar o painel.</p>
+    <div class="button-wrapper">
+    <button class="button-home" onclick="window.location.href='{{ url_for('auth.login') }}'">Entrar</button>
     </div>
-</body>
-</html>
+</div>
+{% endblock %}
