--- a/templates/users.html
+++ b/templates/users.html
@@ -1,19 +1,15 @@
-<!DOCTYPE html>
-<html lang="pt">
-<head>
-    <meta charset="UTF-8">
-    <title>Usuários - SELOEDU</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block title %}Usuários - SELOEDU{% endblock %}
+{% block content %}
+<div class="users-container">
     <h1>Lista de Usuários</h1>
-    <table border="1">
+    <table>
         <thead>
             <tr>
                 <th>ID</th>
                 <th>Nome</th>
                 <th>Email</th>
                 <th>Perfil</th>
-                <th>Status</th>
             </tr>
         </thead>
         <tbody>
@@ -22,11 +18,10 @@
                 <td>{{ user.id }}</td>
                 <td>{{ user.nome }}</td>
                 <td>{{ user.email }}</td>
-                <td>{{ user.perfil }}</td>
-                <td>{{ user.status }}</td>
+                <td>{{ user.role }}</td>
             </tr>
             {% endfor %}
         </tbody>
     </table>
-</body>
-</html>
+</div>
+{% endblock %}
