Update: entrega 05 - Atualização de estrutura e crud users seloedu

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <a href="{{ url_for('users.dashboard') }}">Dashboard</a> |
-            <a href="{{ url_for('users.users') }}">Usuários</a> |
+            <a href="{{ url_for('users.index') }}">Usuários</a> |
             <a href="{{ url_for('auth.logout') }}">Sair</a>
         </nav>
     </header>
